# rod_calc

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs
ui/: app-window.slint
