[package]
name = "rot_calc"
version = "1.0.0"
edition = "2024"

[dependencies]
slint = "1.10.0"

[build-dependencies]
slint-build = "1.10.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Rod Calculator"
FileDescription = "Калькулятор прутов"
OriginalFilename = "rot_calc.exe"
LegalCopyright = "dece1ver © 2025"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
